@@ -3,6 +3,7 @@ ags (0.7.73)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* fixed removed types of libags_gui.types of gtkdoc
 	* fixed return value to be void * of ags_stream_alloc()
+	* improved ags_recycling_create_audio_signal_with_frame_count() to reduce overhead
 
 ags (0.7.72)
 
